--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,25 @@ services:
   postgres:
     image: postgres:15.8
     environment:
-      - POSTGRES_USER=postgres
+      - POSTGRES_USER=testuser
       - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=postgres
+      - POSTGRES_DB=deduplication
     volumes:
       - stored-data:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - "5501:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U testuser -d deduplication"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 4G
+
 volumes:
   stored-data:
