--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,11 @@ services:
       - POSTGRES_DB=deduplication
     volumes:
       - stored-data:/var/lib/postgresql/data
+      - ./scripts:/docker-entrypoint-initdb.d/
     ports:
       - "5501:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U testuser -d deduplication"]
+      test: [ "CMD-SHELL", "pg_isready -U testuser -d deduplication" ]
       interval: 10s
       timeout: 5s
       retries: 5
