--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.26)
-project(service)
+project(source/service)
 
 set(CMAKE_CXX_STANDARD 23)
 
 
-add_subdirectory(service)
+add_subdirectory(source/service)
+add_subdirectory(source/test)
