--- a/source/test/CMakeLists.txt
+++ b/source/test/CMakeLists.txt
@@ -1,5 +1,7 @@
 find_package(GTest REQUIRED)
+find_package(libpqxx REQUIRED)
 
 add_executable(inter_Tests tsts1.cpp)
-target_link_libraries(inter_Tests gtest gmock gtest_main gmock_main)
+target_link_libraries(inter_Tests gtest gmock gtest_main gmock_main dbUtilsLib)
 
+#[[todo link alter commonLibrary,FileUtilsLib,dbUtilsLib]]
