Fix clock timings errors. Add drop_database method. Fix db_manager connection string initialization. Fix bug in delete_directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ project(source/service)
 
 set(CMAKE_CXX_STANDARD 23)
 
-
+#[[file(GLOB common_files CONFIGURE_DEPENDS
+        "IT/*.cpp"
+        "IT/*.h"
+)]]
 add_subdirectory(source/service)
 add_subdirectory(source/test)
