--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,45 @@
 cmake_minimum_required(VERSION 3.26)
-project(source/service)
+project(data_deduplication_service)
 
 set(CMAKE_CXX_STANDARD 23)
 
+add_subdirectory(test)
 
-add_subdirectory(source/service)
-add_subdirectory(source/test)
+#[[if(BUILD_TEST)
+    add_subdirectory(test)
+endif()]]
+
+
+find_package(OpenSSL REQUIRED)
+
+find_package(glog 0.7.1 REQUIRED)
+
+find_package(libpqxx REQUIRED)
+find_package(OpenCV REQUIRED)
+
+
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+
+#[[set_target_properties( targets...
+        PROPERTIES
+        ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
+        LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
+        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
+)]]
+
+include_directories(include)
+
+add_library(commonLibrary src/myconcepts.cpp src/ClockArray.cpp)
+target_link_libraries(commonLibrary glog::glog)
+
+add_library(dbUtilsLib src/dbManager.cpp src/lib.cpp)
+target_link_libraries(dbUtilsLib libpqxx::pqxx pq commonLibrary)
+
+add_library(FileUtilsLib src/ServiceFileInterface.cpp)
+target_link_libraries(FileUtilsLib OpenSSL::SSL -lcrypto commonLibrary dbUtilsLib)#[[remove lcrypto]]
+
+
+add_executable(file_service src/fileServiceTest.cpp)
+target_link_libraries(file_service FileUtilsLib)
