--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,12 +18,11 @@ jobs:
           POSTGRES_DB: deduplication
         ports:
           - "5501:5432"
-        healthcheck:
-          test: [ "CMD-SHELL", "pg_isready -U testuser -d deduplication" ]
-          interval: 10s
-          timeout: 5s
-          retries: 5
-          start_period: 10s
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - name: Install dependencies
         run: |
