--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,8 +35,8 @@ jobs:
           gnupg2 wget ca-certificates apt-transport-https \
           autoconf automake cmake dpkg-dev file make patch libc6-dev
           sudo echo "deb https://apt.llvm.org/noble llvm-toolchain-noble-19 main" \
-            > /etc/apt/sources.list.d/llvm.list && \
-              wget -qO /etc/apt/trusted.gpg.d/llvm.asc \
+            > sudo /etc/apt/sources.list.d/llvm.list && \
+              sudo wget -qO /etc/apt/trusted.gpg.d/llvm.asc \
               https://apt.llvm.org/llvm-snapshot.gpg.key && \
               sudo apt-get -qq update && \
               sudo apt-get install -qqy -t llvm-toolchain-noble-19 clang-19 clang-tidy-19 clang-format-19 lld-19 libc++-19-dev libc++abi-19-dev && \
