--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,72 +23,25 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+    container:
+      image: alexandermey/data-deduplication-service:enviroment_sl
     steps:
-      - name: Install dependencies
-        run: |
-          sudo apt update
-          sudo apt install -y clang ninja-build libpq-dev
-      - name: Install dependencies
-        run: |
-          sudo apt-get -qq update; \
-          sudo apt-get install -qqy --no-install-recommends \
-          gnupg2 wget ca-certificates apt-transport-https \
-          autoconf automake cmake dpkg-dev file make patch libc6-dev
-          sudo echo "deb https://apt.llvm.org/noble llvm-toolchain-noble-19 main" \
-            > sudo /etc/apt/sources.list.d/llvm.list && \
-              sudo wget -qO /etc/apt/trusted.gpg.d/llvm.asc \
-              https://apt.llvm.org/llvm-snapshot.gpg.key && \
-              sudo apt-get -qq update && \
-              sudo apt-get install -qqy -t llvm-toolchain-noble-19 clang-19 clang-tidy-19 clang-format-19 lld-19 libc++-19-dev libc++abi-19-dev && \
-              for f in /usr/lib/llvm-*/bin/*; do sudo ln -sf "$f" /usr/bin; done && \
-              sudo ln -sf clang /usr/bin/cc && \
-              sudo ln -sf clang /usr/bin/c89 && \
-              sudo ln -sf clang /usr/bin/c99 && \
-              sudo ln -sf clang++ /usr/bin/c++ && \
-              sudo ln -sf clang++ /usr/bin/g++ && \
-              sudo rm -rf /var/lib/apt/lists/*
-      - name: Build and install glog
-        run: |
-          cd /home
-          sudo mkdir deps
-          sudo chmod -R 777 deps
-          cd deps
-          git clone https://github.com/google/glog.git
-          cd glog
-          mkdir build&&cd build
-          cmake -G Ninja -DCMAKE_C_COMPILER:PATH="/usr/bin/clang" -DCMAKE_CXX_COMPILER:PATH="/usr/bin/clang++" ..
-          cmake --build .
-          sudo ninja install
-
-      - name: Build and install libpqxx
-        run: |
-          cd /home/deps
-          git clone https://github.com/jtv/libpqxx.git
-          cd libpqxx
-          mkdir build&&cd build
-          cmake -G Ninja -DCMAKE_C_COMPILER:PATH="/usr/bin/clang" -DCMAKE_CXX_COMPILER:PATH="/usr/bin/clang++" -DBUILD_TEST=ON ..
-          cmake --build .
-          sudo ninja install
-
-      - name: Build and install googletest
-        run: |
-          cd /home/deps
-          git clone https://github.com/google/googletest
-          cd googletest
-          mkdir build
-          cd build
-          cmake -G Ninja -DCMAKE_C_COMPILER:PATH="/usr/bin/clang" -DCMAKE_CXX_COMPILER:PATH="/usr/bin/clang++" ..
-          cmake --build .
-          sudo ninja install
-          cd /home/runner/work/data_deduplication_service/data_deduplication_service/
-
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+        with:
+          path: /usr/application/src
+          sparse-checkout: .
 
-      - name: Build and test service
+      - name: Build application
         run: |
-          mkdir build && cd build
-          cmake -G Ninja -DCMAKE_C_COMPILER:PATH="/usr/bin/clang" -DCMAKE_CXX_COMPILER:PATH="/usr/bin/clang++" ..
+          ls /usr/application/src
+          cd ../build
+          cmake -G Ninja -DCMAKE_C_COMPILER:PATH="/usr/bin/clang" \
+          -DCMAKE_CXX_COMPILER:PATH="/usr/bin/clang++" \
+          ../src/
           ninja
+
+      - name: run tests
+        run: |
           cd test
-          ctest --output-on-failure
+          cd /usr/application/build/test && GLOG_logtostderr=0;GLOG_stderrthreshold=0 ./FileServiceTests
