--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,8 +34,9 @@ jobs:
 
       - name: Build application
         run: |
+          ls
           ls /__w/data_deduplication_service/data_deduplication_service/src
-          mkdir ../build && cd ../build
+          mkdir build && cd build
           cmake -G Ninja -DCMAKE_C_COMPILER:PATH="/usr/bin/clang" \
           -DCMAKE_CXX_COMPILER:PATH="/usr/bin/clang++" \
           ../src/
