--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Build and run tests
         run: |
           mkdir ${GITHUB_WORKSPACE}/logs
-          sudo chmod -R 777 ${GITHUB_WORKSPACE}/logs
+          chmod -R 777 ${GITHUB_WORKSPACE}/logs
           mkdir build && cd build
           cp -r ../src/conf/ ../conf 
           cmake -G Ninja -DCMAKE_C_COMPILER:PATH="/usr/bin/clang" \
