--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,8 @@ jobs:
       - name: Build and run tests
         run: |
           mkdir ${GITHUB_WORKSPACE}/logs
+          chmod -R 755 ${GITHUB_WORKSPACE}/logs
+          
           mkdir build && cd build
           cp -r ../src/conf/ ../conf 
           cmake -G Ninja -DCMAKE_C_COMPILER:PATH="/usr/bin/clang" \
@@ -51,5 +53,6 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: logs
-          path: |
-            ${GITHUB_WORKSPACE}/logs
+          path: ${GITHUB_WORKSPACE}/logs
+          if-no-files-found: warn
+          include-hidden-files: true
