Add several nested directory tests. Fix some configuration issues.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -18,7 +18,7 @@ file(GLOB TEST_SOURCES_2 files_service_IT/*.cpp)
 add_executable(FileServiceTests ${TEST_SOURCES_2})
 
 target_link_libraries(FileServiceTests PRIVATE
-        gtest gmock #[[gtest_main]] dbUtilsLib
+        gtest gmock FileUtilsLib
 )
 
 
