Save logs everytime. Remove ostream reference returning function that cause segfault. Perform code reformat.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,7 @@ jobs:
           cd ${GITHUB_WORKSPACE}/build/test
           GLOG_log_dir=${GITHUB_WORKSPACE}/logs ./FileServiceTests
       - name: Save log files
+        if: success() || failure()
         uses: actions/upload-artifact@v4
         with:
           name: logs
