Add basic benchmarkForTesting

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,11 +3,19 @@ enable_testing()
 
 find_package(GTest REQUIRED)
 find_package(libpqxx REQUIRED)
+find_package(glog 0.7.1 REQUIRED)
+find_package(OpenSSL REQUIRED)
 include_directories(../include)
 include_directories(../fff)
 file(GLOB TEST_SOURCES_1 clock_array/*.cpp)
 add_executable(clock_array_tests ${TEST_SOURCES_1}
-        testUtils.h)
+        )
+
+
+add_executable(benchmark bencmark.cpp)
+target_link_libraries(benchmark
+        FileUtilsLib gtest gmock
+)
 
 target_link_libraries(clock_array_tests PRIVATE
         gtest gmock gtest_main
