Add docker image build workflow.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,16 @@
 name: Build and Test
 
 on:
+  workflow_run:
+    workflows: [ "Build and push docker image" ]  # This matches the name of your docker_build.yml
+    types:
+      - completed
   push:
     paths-ignore:
       - sripts/**
       - README.md
       - documentation/**
+      - Dockerfile
 
 jobs:
   build-and-test:
