--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,8 @@ on:
 jobs:
   call_docker_wf:
     uses: ./.github/workflows/docker_build.yml
-    if: contains(github.event.head_commit.modified, 'Dockerfile')
+      
+    #if: contains(github.event.head_commit.modified, 'Dockerfile')
   build-and-test:
     runs-on: ubuntu-latest
     services:
@@ -51,12 +52,12 @@ jobs:
         run: |
           cd ${GITHUB_WORKSPACE}/build/test
           GLOG_log_dir=${GITHUB_WORKSPACE}/logs ./FileServiceTests
+          echo ${github.event.head_commit.modified}
       - name: Save log files
         if: success() || failure()
         uses: actions/upload-artifact@v4
         with:
           name: logs
           path: /__w/data_deduplication_service/data_deduplication_service/logs
-#          i seems like "uses" steps can't deduce ${GITHUB_WORKSPACE}/logs
           if-no-files-found: warn
           include-hidden-files: true
