--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,9 @@ on:
 jobs:
   call_docker_wf:
     uses: ./.github/workflows/docker_build.yml
-      
+    secrets:
+     DOCKER_PASSWORD=${{secrets.DOCKER_PASSWORD}}
+     DOCKER_USERNAME=${{secrets.DOCKER_USERNAME}}
     #if: contains(github.event.head_commit.modified, 'Dockerfile')
   build-and-test:
     runs-on: ubuntu-latest
@@ -52,7 +54,7 @@ jobs:
         run: |
           cd ${GITHUB_WORKSPACE}/build/test
           GLOG_log_dir=${GITHUB_WORKSPACE}/logs ./FileServiceTests
-          echo ${github.event.head_commit.modified}
+          echo ${{github.event.head_commit.modified}}
       - name: Save log files
         if: success() || failure()
         uses: actions/upload-artifact@v4
