--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,11 +13,9 @@ on:
 jobs:
   call_docker_wf:
     uses: ./.github/workflows/docker_build.yml
-    secrets:
-     DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-     DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
-    #if: contains(github.event.head_commit.modified, 'Dockerfile')
+    secrets: inherit
   build-and-test:
+    needs: call_docker_wf
     runs-on: ubuntu-latest
     services:
       postgres:
