--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ on:
 jobs:
   call_docker_wf:
     uses: ./.github/workflows/docker_build.yml
+    if: false
     secrets: inherit
   build-and-test:
     needs: call_docker_wf
