--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -1,11 +1,8 @@
 name: Build and push docker image
 on:
-  workflow_call:
-    secrets:
-      DOCKER_USERNAME:
-        required: true
-      DOCKER_PASSWORD:
-        required: true
+  push:
+    paths:
+      - Dockerfile
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
