--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(data_deduplication_service)
 set(CMAKE_CXX_STANDARD 23)
 
 SET( CMAKE_CXX_FLAGS_DEBUG  "-g -std=gnu++2b")
-SET( CMAKE_CXX_FLAGS_RELEASE  "-Ofast -DNDEBUG -march=native -fpic -ftree-vectorize")
+SET( CMAKE_CXX_FLAGS_RELEASE  "-O3 -ffast-math -DNDEBUG -march=native -fpic -ftree-vectorize")
 SET( CMAKE_CXX_FLAGS  " -std=gnu++2b -fcolor-diagnostics")
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release)
