--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,12 @@ jobs:
           -DCMAKE_CXX_COMPILER:PATH="/usr/bin/clang++" \
           ../src/
           ninja
-      - name: Run tests
+      - name: Run clockArrayTests
+        run: |
+          cd ${GITHUB_WORKSPACE}/build/test
+          ./clock_array_tests
+      - name: Run fileServiceTests
+        if: success() || failure()
         run: |
           cd ${GITHUB_WORKSPACE}/build/test
           GLOG_log_dir=${GITHUB_WORKSPACE}/logs ./FileServiceTests
