--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
         if: success() || failure()
         run: |
           cd ${GITHUB_WORKSPACE}/build/test
-          ./benchmark
+          GLOG_log_dir=${GITHUB_WORKSPACE}/logs ./benchmark
       - name: Save benchmake results
         if: success() || failure()
         uses: actions/upload-artifact@v4
